tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__bares_window_params_and_flags_them.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - imports: drop the now-unused `Runtime`; `Channel` is now `ttipc::Channel`.
//   - de-async: methods with no blocking `.await` were made sync (ttipc's default), and their `.await`s on now-sync siblings were dropped.
//   - windows: ttipc injects only `AppHandle`/`State<T>`; a `Window`/`WebviewWindow` parameter needs manual rework (obtain it from the injected `AppHandle`).

#[ttipc::procedures(path = "ui")]
pub trait Ui {
    fn get_window(&self, window: Window);
    fn get_webview(&self, webview_window: WebviewWindow);
}
pub struct UiImpl;
impl Ui for UiImpl {
    fn get_window(&self, window: Window) {
        println!("{}", window.label());
    }
    fn get_webview(&self, webview_window: WebviewWindow) {
        println!("{}", webview_window.label());
    }
}
