tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__deasync_is_transitive_across_files.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: cmd_out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - errors: each `Result<_, E>` needs `E: ttipc::Error` (derive it on the error type).
//   - imports: drop the now-unused `Runtime`; `Channel` is now `ttipc::Channel`.
//   - de-async: methods with no blocking `.await` were made sync (ttipc's default), and their `.await`s on now-sync siblings were dropped.


#[ttipc::procedures(path = "cmd")]
pub trait CmdMethods {
    fn sync_state(&self, app_handle: AppHandle) -> Result<String, String>;
}

impl CmdMethods for CmdEndpoint {
    fn sync_state(&self, app: AppHandle) -> Result<String, String> {
        SyncEndpoint.sync_state(app.clone())
    }
}
