tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__deasync_is_transitive_and_strips_sibling_awaits.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - imports: drop the now-unused `Runtime`; `Channel` is now `ttipc::Channel`.
//   - de-async: methods with no blocking `.await` were made sync (ttipc's default), and their `.await`s on now-sync siblings were dropped.

#[ttipc::procedures(path = "store")]
pub trait Store {
    fn load(&self, app_handle: AppHandle) -> Result<u8, String>;
    fn save(&self, app_handle: AppHandle) -> Result<u8, String>;
    fn refresh(&self, app_handle: AppHandle) -> Result<u8, String>;
}
pub struct StoreImpl;
impl Store for StoreImpl {
    fn load(&self, app_handle: AppHandle) -> Result<u8, String> {
        Ok(1)
    }
    fn save(&self, app_handle: AppHandle) -> Result<u8, String> {
        Ok(2)
    }
    fn refresh(&self, app_handle: AppHandle) -> Result<u8, String> {
        StoreImpl.load(app_handle.clone())?;
        StoreImpl.save(app_handle)
    }
}
