tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__deasyncs_methods_without_await.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - errors: a `Result<_, E>` with a custom error needs `E: ttipc::Error` (derive it on the enum); `Result<_, String>` works out of the box.
//   - imports: drop the now-unused `Runtime`; `Channel` is now `ttipc::Channel`.
//   - de-async: methods with no blocking `.await` were made sync (ttipc's default), and their `.await`s on now-sync siblings were dropped.
//   - async injection: ttipc rejects an `async` procedure that takes `AppHandle`/`State<T>`; make it sync, or rework so the async body needs no injected handle/state.

#[ttipc::procedures(path = "calc")]
pub trait Calc {
    fn add(&self, app_handle: AppHandle, a: u8, b: u8) -> u8;
    async fn load(&self, app_handle: AppHandle) -> Result<u8>;
}
pub struct CalcImpl;
impl Calc for CalcImpl {
    fn add(&self, app_handle: AppHandle, a: u8, b: u8) -> u8 {
        a + b
    }
    async fn load(&self, app_handle: AppHandle) -> Result<u8> {
        fetch(&app_handle).await
    }
}
