tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__derives_event_on_an_in_file_payload_enum.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - events: a `#[taurpc(event)]` method carrying a payload enum was removed; `#[derive(ttipc::Event)]` was added to that enum (its variants are the events). Emit it directly as `event.emit(&h)`; drop any now-empty trait/impl.

#[derive(ttipc::Event)]
pub enum AppEvent {
    AuthChanged(bool),
    Tick,
}
#[ttipc::procedures(path = "app")]
pub trait AppMethods {
    async fn ping(&self) -> u8;
}
