tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__drops_orphaned_export_config_locals_and_import.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: lib
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - mount: the TauRPC Router/handler became `ttipc::handler(..)` (a `-> Router` factory now returns `ttipc::Procedures`); generate bindings separately (`ttipc::Bindings`, replacing the dropped `export_config`) and keep app state on `.manage(..)`.

use tauri::Manager;

pub fn run() {
    let default_buffer = make_buffer();
    let router = SyncEndpoint.into_procedures().merge(CmdEndpoint.into_procedures());
    tauri::Builder::default()
        .manage(default_buffer)
        .invoke_handler(ttipc::handler(router))
        .run(tauri::generate_context!())
        .expect("error");
}
