tauri-typed-ipc-migrate/src/snapshots/ttipc_migrate__tests__flags_bigint_wire_types.snap
---
source: tauri-typed-ipc-migrate/src/lib.rs
expression: out
---
// Migrated from TauRPC by ttipc-migrate. Manual follow-ups:
//   - imports: drop the now-unused `Runtime`; `Channel` is now `ttipc::Channel`.
//   - bigint: a wire type uses a BigInt-style integer (`u64`/`i64`/`usize`/`i128`/...); ttipc's exporter rejects these (TauRPC's `BigIntExportBehavior` has no ttipc equivalent), so the bindings will not generate until you narrow them to a 32-bit-or-smaller integer (e.g. `u32`).
//   - async injection: ttipc rejects an `async` procedure that takes `AppHandle`/`State<T>`; make it sync, or rework so the async body needs no injected handle/state.

#[derive(serde::Serialize, specta::Type, Clone)]
pub struct Channel {
    pub channel_number: usize,
    pub count: u32,
    pub label: String,
}
#[ttipc::procedures(path = "cmd")]
pub trait CmdMethods {
    async fn update_channel_value(
        &self,
        app_handle: AppHandle,
        channel_number: usize,
        value: u8,
    ) -> Result<u8, String>;
}
